# promptwall-bench

./: .dockerignore  .env.example  .gitignore  DEMOCORP_README.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_evaluation_tables.py  0003_promptwall_candidate.py  0004_saas_billing.py  0005_commerce_orders.py  0006_eval_result_domain_risk.py  0007_textual_knowledge.py
app/: config.py  db.py  main.py  seed.py
app/eval/: __init__.py  (+4 more)
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
tests/: conftest.py  test_api.py  test_benchmark_runner.py  test_chat.py  test_chat_phase_6b5.py  test_commerce_schema.py  test_data_quality_report.py  test_eval_compare.py  test_eval_generator.py  test_eval_generator_phase_6b6.py  test_eval_report.py  test_eval_scorer.py  test_frontend_readiness.py  test_knowledge_schema.py  test_knowledge_seed.py  test_llm_logging.py  test_llm_mock.py  test_llm_openai.py  test_models.py  test_promptwall_analyzer.py  test_promptwall_enforced.py  test_promptwall_router.py  test_promptwall_shadow.py  test_saas_schema.py  test_scales_and_db_size.py  test_seed.py  test_text_knowledge_report.py  test_text_retrieval_quality_phase_6c1.py  test_tool_executor.py  test_tools.py  test_tools_phase2e.py  test_tools_phase_6b4.py  test_tools_phase_c1.py  test_tools_phase_c2.py  test_trace_service.py
(+64 files in other folders)
